// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component should change border color 1`] = `
<div>
  <div
    class="sc-bcXHqe jzNJFC"
  >
    <div
      class="sc-gswNZR gGndHZ"
      color="black"
    >
      Name - 
      Johnny
    </div>
    <div
      class="sc-gswNZR gGndHZ"
      color="black"
    >
      Surname - 
      Silverhand
    </div>
  </div>
</div>
`;

exports[`Input component should change border color 2`] = `
<div>
  <div
    class="sc-bcXHqe jzNJFC"
  >
    <div
      class="sc-gswNZR csldCJ"
      color="red"
    >
      Name - 
      new name
    </div>
    <div
      class="sc-gswNZR gGndHZ"
      color="black"
    >
      Surname - 
      Silverhand
    </div>
  </div>
</div>
`;

exports[`Input component should change border color 3`] = `
<div>
  <div
    class="sc-bcXHqe jzNJFC"
  >
    <div
      class="sc-gswNZR csldCJ"
      color="red"
    >
      Name - 
      new name
    </div>
    <div
      class="sc-gswNZR dNPVBI"
      color="blue"
    >
      Surname - 
      new surname
    </div>
  </div>
</div>
`;
